@@ -103,7 +103,8 @@ Indicates the button whose <b>-text</b> option is <i>text</i>.
 <DL><DT><A NAME="-background"><B>-background</B></A></DT>
 <DD>
 
-Specifies a default background color for all added buttons and for the frame.
+Specifies a default background color for all added buttons and for the frame.<BR>
+For <I>themed</I> wigets, the button color is not set.
 
 </DD>
 </DL>
@@ -139,14 +140,15 @@ If this option is <B>vertical</B>, buttons are added from left to right.
 <DL><DT><A NAME="-padx"><B>-padx</B></A></DT>
 <DD>
 
-Specifies a default value for the -padx option of all added buttons.
-
+Specifies a default value for the -padx option of all added buttons.<BR>
+Option has no effect for <I>themed</I> wigets.
 </DD>
 </DL>
 <DL><DT><A NAME="-pady"><B>-pady</B></A></DT>
 <DD>
 
-Specifies a default value for the -pady option of all added buttons.
+Specifies a default value for the -pady option of all added buttons.<BR>
+Option has no effect for <I>themed</I> wigets.
 
 </DD>
 </DL>
