@@ -33,8 +33,7 @@
 </TR>
 <TR>
 
-<TD>&nbsp;&nbsp;<A HREF="#-buttonwidth">-buttonwidth</A></TR>
-<TD>&nbsp;&nbsp;<A HREF="#-cancel">-cancel</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-cancel">-cancel</A></TD>
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="#-default">-default</A></TR>
@@ -137,13 +136,6 @@ If <B>side</B> option is set to <I>left</I> or <I>right</I>,
 
 Specifies a bitmap to display at the left of the user frame.
 <B>image</B> option override <B>bitmap</B>.
-</DD>
-</DL>
-<DL><DT><A NAME="-buttonwidth"><B>-buttonwidth (read-only)</B></A></DT>
-<DD>
-
-Specifies the width of the buttons as specified for the option <B>width</B>
-of the <B>button</b> widget.
 </DD>
 </DL>
 <DL><DT><A NAME="-cancel"><B>-cancel</B></A></DT>
